<resources>
    <string name="app_name">MemCards</string>
    <string name="app_name_fun">🙈 MemCards 🙊</string>
    <string name="app_domain">com.squeeve.memcards</string>

    <!-- LOGIN/REGISTER PAGE STRINGS -->
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="resend_email">RESEND VERIFICATION</string>
    <string name="register">CREATE ACCOUNT</string>

    <!-- GAME STRINGS -->
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="Return">End game</string>
    <string name="card_back">🌀</string>
    <string name="congrats">🥳 AMAZING JOB!</string>
    <string name="tries">Tries: %d </string>
    <string name="laughing_dragon">laughing dragon</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_email">FORGOT EMAIL?</string>
    <string-array name="card_contents">

        <item>🦊</item>
        <item>🐒</item>
        <item>🐱</item>
        <item>🐭</item>
        <item>🐸</item>
        <item>🐞</item>
        <item>🦋</item>
        <item>🦉</item>
        <item>🐍</item>
        <item>🐳</item>
        <item>🐡</item>
        <item>🦀</item>
        <item>🦄</item>
        <item>🐊</item>
        <item>🦃</item>
        <item>🦚</item>
        <item>🐲</item>
        <item>🦩</item>
        <item>🐁</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="start_over">Start over</string>
    <string name="timer_text">Time: %1$s</string>
    <string name="userstats">UserStats</string>
    <string name="user_stats">User\'s statistics for this game</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="timestamp">timestamp</string>
    <string name="you_scored_x_at_level_y">You scored: %1$s at level %2$s</string>
    <string name="time">Time: %1$s</string>
    <string name="easy">Easy</string>
</resources>