<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".LeaderboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_menu_24"
            app:popupTheme="@style/Theme.Design.Light"
            app:title="@string/app_name_fun"
            tools:layout_editor_absoluteX="57dp" />

        <LinearLayout
            android:id="@+id/userStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/topToolbar"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_profile_picture"
                android:id="@+id/userProfilePic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/topToolbar"
                android:padding="20dp"
                android:id="@+id/userStatsText"
                android:background="@color/white"
                android:textSize="13dp"
                android:text="@string/userstats"
                android:contentDescription="@string/user_stats"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/user_menu" />

</androidx.drawerlayout.widget.DrawerLayout>